# mec-proj-wk

./: cinematica.py  control.py  motores.py
robot/: package.xml  setup.py
robot/launch/: _launch.py  _launchContrGaz.py  _launchContrOnlyGaz.py  _launchOnlySim.py  _launchProg.py  _launchProgOnlyGaz.py  _launchProgOnlySim.py  _launchSim.py  _launchTeclGaz.py  _launchTeclSim.py
robot/robot/: Test.py  TestCinematica.py  TestMotores.py  TestNode.py  TestSim.sdf  building_robot.sdf  cinematica.py  datos_sim.py  datos_simG.py  draw_circle.py  gazebo.py  manipulador.py  manipuladorTeclado.py  motores.py  mover.py  programar.py  topic_bridge.yaml
simulation/: CMakeLists.txt  package.xml
simulation/launch/: launch.py
simulation/launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
simulation/rviz/: open_manipulator_x.rviz
simulation/src/: control.py  test.py
simulation/urdf/: open_manipulator_x.urdf  simulation.sdf  simulation2.sdf
