<?xml version="1.0"?>
<package format="3">
  <name>simulation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="laus@todo.todo">laus</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 Python dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
